# myscout

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: settings.json
apps/web/: CLAUDE.md  package.json  pnpm-lock.yaml
apps/web/src/__bootstrap__/: bootstrap-providers.tsx
apps/web/src/app/: layout.tsx
apps/web/src/app/jobs/: page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/features/job-detail/: job-detail.tsx  presenter.test.ts  presenter.ts  types.ts  use-controller.ts  utils.ts  view.tsx
apps/web/src/lib/: db.ts  display-utils.ts  types.ts
apps/web/src/theme/: theme-config.ts
apps/worker/: CLAUDE.md  pyproject.toml
apps/worker/myscout/: __main__.py  cli.py  setup.py  targets.py
apps/worker/myscout/canonicalization/: fingerprint.py
apps/worker/myscout/connectors/: __init__.py  adzuna.py  ashby.py  base.py  browser.py  greenhouse.py  lever.py  remotive.py  site.py  usajobs_stub.py
apps/worker/myscout/db/: models.py  session.py
apps/worker/myscout/db/migrations/: env.py
apps/worker/myscout/extraction/: feature_extractor.py
apps/worker/myscout/scoring/: scoring_engine.py
apps/worker/tests/: test_cli.py  test_connectors.py  test_feature_extractor.py  test_fingerprint.py  test_scoring_engine.py  test_scoring_integration.py
config/: example.profile.yml  sources.yml  targets.yml
docs/: architecture.md  dependencies.md  features.md  logs.md  roadmap.md
docs/prompts/: setup.md
saved_jobs/: README.md
scripts/: backup.sh  dev.sh  ingest.sh  reset.sh  restore.sh  save.sh  score.sh
(+14 files in other folders)
